# reinforest_with_yukky

./: README.md  pyproject.toml
src/: 01.py  DDQN.ipynb  DQN.ipynb  cartpole-Copy1.ipynb  cartpole.ipynb  cartpole.py  touritufuriko.ipynb  work01.py  work02.py  work03.py
src/.ipynb_checkpoints/: cartpole-checkpoint.ipynb
