[tool.poetry]
name = "reinforest_with_yukky"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
IPython = "^7.15.0"
matplotlib = "^3.2.1"
logzero = "^1.5.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
